update PID test